--- a/EyeSpeak/Supporting Files/Base.lproj/LaunchScreen.storyboard
+++ b/EyeSpeak/Supporting Files/Base.lproj/LaunchScreen.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="landscape" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,10 +16,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="WJW-kU-S94">
-                                <rect key="frame" x="222.5" y="129.5" width="222" height="116"/>
+                                <rect key="frame" x="222.5" y="157.5" width="222" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="WJW-kU-S94" secondAttribute="height" multiplier="37:10" id="iJt-fU-AiM"/>
+                                </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" name="Primary"/>
+                        <color key="backgroundColor" red="0.2196078431372549" green="0.19215686274509802" blue="0.62745098039215685" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="WJW-kU-S94" firstAttribute="width" secondItem="98A-gK-Ioc" secondAttribute="width" multiplier="1:3" id="8rK-on-vs5"/>
                             <constraint firstItem="WJW-kU-S94" firstAttribute="centerY" secondItem="98A-gK-Ioc" secondAttribute="centerY" id="aVh-o1-7SQ"/>
@@ -35,9 +37,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo" width="439" height="116"/>
-        <namedColor name="Primary">
-            <color red="0.45098039215686275" green="0.0" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
+        <image name="logo" width="60" height="60"/>
     </resources>
 </document>
